[package]
name = "pyo3-gated"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Attribute macros to expose Rust types to Python via PyO3 from a single definition — no duplicate structs or impl blocks."
readme      = "README.md"
repository  = "https://github.com/giddyos/pyo3-gated"
homepage    = "https://github.com/giddyos/pyo3-gated"
keywords    = ["pyo3", "python", "macros", "bindings", "codegen"]
categories  = [
    "development-tools::procedural-macro-helpers",
    "api-bindings",
    "rust-patterns",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }